got all endpoints and integration tests working

--- a/Api/appsettings.Integration.json
+++ b/Api/appsettings.Integration.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "BenefitsCalculatorDb": "Data Source=LocalDatabase.db"
+    "BenefitsCalculatorDb": "Data Source=IntegrationDatabase.db"
   },
   "AllowedHosts": "*"
 }
