--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1"/>
+        <PackageReference Include="FluentValidation" Version="11.10.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.33"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0"/>
